# otus-cpp-hw

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  Untitled Diagram.drawio  lib.cpp  lib.h  main.cpp  test_version.cpp  version.h.in
.github/workflows/: doxygen.yml  release.yml
include/: custom_allocator.hpp  custom_matrix.hpp  custom_vector.hpp  ip_filter.hpp  ip_print.hpp  lib.h  lib.hpp
include/graphic_editor/: canvas.hpp  circle.hpp  controller.hpp  iShape.hpp  shape_manager.hpp
include/hw01_version/: lib_version.hpp
include/hw04_sfinae/: container_trait.hpp
include/hw05_graphic_editor/: circle.hpp
include/hw06_matrix/: print_tuple.hpp
include/hw07_terminal/: terminal.hpp
include/hw08_boost/: file_parser.hpp
include/hw09_async_terminal/: async.hpp
include/hw10_network_terminal/: network_terminal.hpp
include/hw11_join_server/: join_server.hpp
include/hw12_map_reduce/: map_reduce.hpp
include/hw13_ml_computer_vision/: ml_classifier.hpp  utility.hpp
src/: ip_filter.cpp  lib.cpp  number_sequence.hpp  split.hpp
src/graphic_editor/: circle.cpp  controller.cpp  shape_manager.cpp
src/hw01_version/: lib_version.cpp
src/hw05_graphic_editor/: canvas.cpp  controller.cpp
src/hw07_terminal/: command_handler.cpp  command_handler.hpp  command_parser.cpp  command_parser.hpp  i_command_handler.hpp  terminal.cpp
src/hw08_boost/: file_parser.cpp  hash.cpp  hash.hpp
src/hw09_async_terminal/: async.cpp  async_process.cpp  async_process.hpp  async_terminal.cpp  async_terminal.hpp
src/hw10_network_terminal/: bulk_session.cpp  bulk_session.hpp  decorator_async.cpp  decorator_async.hpp  network_terminal.cpp
src/hw11_join_server/: join_server.cpp  join_session.cpp  join_session.hpp  table_data.hpp  table_keeper.cpp  table_keeper.hpp
src/hw12_map_reduce/: map_reduce.cpp  mp_map.hpp  mp_reduce.hpp  mp_shuffle.hpp  utility.cpp  utility.hpp
src/hw13_ml_computer_vision/: ml_classifier.cpp
tests/: test_hw11_join_server.cpp  test_hw12_map_reduce.cpp  test_hw13_ml_computer_vision.cpp  test_hw1_version.cpp  test_hw2_ip_filter.cpp  test_hw3_custom_allocator.cpp  test_hw3_custom_vector.cpp  test_hw5_graphic_editor.cpp  test_hw6_matrix.cpp  test_hw7_terminal.cpp  test_hw8_boost.cpp  test_hw9_async.cpp
tests/boost/: CMakeLists.txt  test_version.cpp
tests/google/: CMakeLists.txt  test_version.cpp
